fix: fix messages overflow container with a scrollbar

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -40,7 +40,3 @@ i .icon {
 .fullsize {
   @apply w-full h-full
 }
-
-.message-panel {
-  height: 90%;
-}
